--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo apt-get update && sudo apt-get install -y make
 
 script:
+  - make test-py35
   - make test-py36
   - make test-py37
 
