--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
       env: PY_VERSION=py36
     - name: "Python 3.7"
       env: PY_VERSION=py37
+    - name: "Python 3.8"
+      env: PY_VERSION=py38
 
 services:
   - docker
