Run the tests on LLDB 10 as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,15 @@ jobs:
     - name: "Python 3.8 @ LLDB 9"
       env: PY_VERSION=py38 LLDB_VERSION=lldb9
 
+    - name: "Python 3.5 @ LLDB 10"
+      env: PY_VERSION=py35 LLDB_VERSION=lldb10
+    - name: "Python 3.6 @ LLDB 10"
+      env: PY_VERSION=py36 LLDB_VERSION=lldb10
+    - name: "Python 3.7 @ LLDB 10"
+      env: PY_VERSION=py37 LLDB_VERSION=lldb10
+    - name: "Python 3.8 @ LLDB 10"
+      env: PY_VERSION=py38 LLDB_VERSION=lldb10
+
 services:
   - docker
 
