--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,13 @@ jobs:
 
       - name: Build artifacts
         run: |
+          git fetch --tags
+
           poetry version $(git describe --tags --abbrev=0)
+          if [[ "${GITHUB_REF}" != refs/tags/* ]]; then
+            poetry version preminor
+          fi
+
           poetry build
 
       - id: release_params
@@ -37,7 +43,7 @@ jobs:
             echo "::set-output name=title::${GITHUB_REF#refs/tags/}"
           else
             echo "::set-output name=prerelease::true"
-            echo "::set-output name=release_tag::latest"
+            echo "::set-output name=release_tag::$(poetry version -s)"
             echo "::set-output name=title::Development Build"
           fi
 
@@ -49,7 +55,7 @@ jobs:
           automatic_release_tag: ${{ steps.release_params.outputs.release_tag }}
           title: ${{ steps.release_params.outputs.title }}
           files: |
-            - dist/*.whl
+            dist/*.whl
 
       - name: Publish to PyPI (only if it's a final release)
         if: ${{ !steps.release_params.outputs.prerelease }}
