--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ python = "~2.7 || ^3.5"
 six = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^4.4.0"
-pytest-xdist = "^1.34.0"
+# we want to specify the depedency on pytest here as well, but that confuses poetry, so we rely
+# on pytest-xdist to depend on pytest transitively instead
+pytest-xdist = [
+    {version = "^1.34.0", python = "<3.6"},
+    {version = "^2.3.0",  python = "^3.6"},
+]
 test_extension = { path = "tests/test_extension/" }
