Stop using Poetry specific config for test_extension
The new version of Poetry changed the way C extensions are built.
We can stop using Poetry specific directives altogether and just
rely on the standard pyproject.toml + setuptools build.

--- a/tests/test_extension/pyproject.toml
+++ b/tests/test_extension/pyproject.toml
@@ -1,9 +1,8 @@
-[tool.poetry]
+[project]
 name = "test_extension"
 version = "0.1.0"
 description = "A dummy CPython Extension for cpython_lldb tests"
-authors = ["Roman Podoliaka <roman.podoliaka@gmail.com>"]
-build = "build.py"
 
-[tool.poetry.dependencies]
-python = "*"
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
