Minor documentation updates
The primary motivation is to exercise the new PyPI publishing process.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "cpython-lldb"
 version = "0.0.0"
-description = "LLDB script for debugging of CPython processes"
+description = "LLDB extension for debugging Python programs"
 license = "MIT"
 
 authors = [
