--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment:
+      name: pypi
+      url: https://pypi.org/p/cpython-lldb
+
+    permissions:
+      id-token: write
+
     steps:
       - uses: actions/checkout@v3
 
@@ -54,5 +61,4 @@ jobs:
 
       - name: Publish to PyPI (only if it's a final release)
         if: ${{ !fromJSON(steps.release_params.outputs.prerelease) }}
-        run: |
-          POETRY_PYPI_TOKEN_PYPI=${{ secrets.PYPI_TOKEN }} poetry publish
+        uses: pypa/gh-action-pypi-publish@release/v1
