Fix permissions for the release workflow: it needs additional permissions for creating tags and releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
 
     permissions:
       id-token: write
+      contents: write
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
