--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,11 @@ homepage = "https://github.com/malor/cpython-lldb"
 keywords = ["debugging", "lldb", "cpython"]
 
 [tool.poetry.dependencies]
-python = "~2.7 || ^3.7"
+python = "^3.7"
 six = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.4.0"
+pytest-xdist = "^2.5.0"
 pexpect = "^4.8.0"
-# we want to specify the depedency on pytest here as well, but that confuses poetry, so we rely
-# on pytest-xdist to depend on pytest transitively instead
-pytest-xdist = [
-    {version = "^1.34.0", python = "<3.6"},
-    {version = "^3.1.0",  python = "^3.7"},
-]
 test_extension = { path = "tests/test_extension/" }
