--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 name: Tests
 on:
   push:
-    ranches: [ master ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
   schedule:
@@ -13,6 +13,13 @@ defaults:
     shell: bash
 
 jobs:
+  spellcheck:
+    name: Spell check with Typos
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: crate-ci/typos@v1.27.3
+
   test:
     strategy:
       matrix:
