--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,25 @@ jobs:
       - uses: actions/checkout@v4
       - uses: crate-ci/typos@v1.27.3
 
+  linter:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install pytest / Ruff
+        run: |
+          python -m pip install pytest ruff
+
+      - name: Run Python linter
+        run: |
+          ruff format --check
+          ruff check
+
   test:
     strategy:
       matrix:
