ci: test on LLDB 21
This required minor changes:

* LLDB 21 is only available for Debian Trixie
* ... but Debian Trixie removed apt-key
* ... and the provided gcc version is more stringent about implicit casts

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,6 +51,13 @@ jobs:
           - '11'
           - '15'
           - '16'
+          - '21'
+        exclude:
+          # LLDB >=20 requires a Debian Trixie Docker image that does not support older CPython versions.
+          - py_version: '3.7'
+            lldb_version: '21'
+          - py_version: '3.8'
+            lldb_version: '21'
 
     runs-on: ubuntu-latest
 
